Fix to the nav spacing for more than four items

--- a/wp-content/themes/standard-industries/styles/global/_nav.scss
+++ b/wp-content/themes/standard-industries/styles/global/_nav.scss
@@ -195,7 +195,7 @@
       margin-bottom: 24px;
       width: 48%;
 
-      &:nth-last-child(-n + 4) {
+      &:nth-last-child(-n + 3) {
         margin-bottom: 0;
       }
 
